--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~11.2.5",
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
+    "bootstrap": "^4.6.0",
+    "eva-icons": "^1.1.3",
     "rxjs": "~6.6.0",
+    "sass": "^1.32.8",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
